# hisdk

./: .gitignore  CMakeLists.txt  README.md  makefile
example/: CMakeLists.txt  example_himl.c  example_hirt.c  example_hisdk_log.c  example_host.c
example/example_common/: CMakeLists.txt  example_hisdklog.c  example_hmodel.cpp
example/example_hidv/: CMakeLists.txt  example_hidv.cpp
example/example_himl/: CMakeLists.txt  example_himl.c  example_himl.cpp
example/example_hirt/: CMakeLists.txt  example_hirt conv.cpp  example_hirt.c  example_hirt.cpp  example_hirt_model.cpp  example_hirt_vadd.cpp
example/example_hirt/kernel/conv/: makefile
example/example_hirt/kernel/src/: hpu_api.s  kernel_main.c  start.s
example/example_hirt/kernel/vadd/: link.lds  makefile
example/example_hirt/kernel/vadd/inc/: hpu_api.h  hpu_def.h  hpu_def.inc
example/example_hirt/kernel/vadd/src/: hpu_api.s  kernel_main.c  start.s
example/example_hisdk_log/: CMakeLists.txt  example_hisdk_log.c
example/example_hmodel/: CMakeLists.txt  example_hmodel.cpp
include/: hidv.h  himl.h  hirt.h  hirt_cqueue.h  hirt_device.h  hirt_event.h  hirt_fifo.h  hirt_kernel.h  hirt_scheduler.h  hisdk.h  hisdk_config.h  hisdk_error.h  hisdk_log.h  hisdk_type.h  hmodel_generated.h  libhirt.h
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  hisdk_error.c  hisdk_log.c  hisdk_port.h  hisdk_port_os.c
lib/common/argtable3/: CMakeLists.txt
lib/hidv/: CMakeLists.txt  hidv_interface.cpp  hidv_utils.cpp
lib/himl/: CMakeLists.txt  himl_model.cpp  himl_op.c  himl_op.cpp  himl_param.c  himl_tensor.c  himl_tensor.cpp  hmodel.cpp  hmodel.fbs  hmodel.h
lib/hirt/: CMakeLists.txt  hirt_cqueue.c  hirt_cqueue.h  hirt_device.c  hirt_device.cpp  hirt_event.c  hirt_event.cpp  hirt_event.h  hirt_fifo.c  hirt_fifo.cpp  hirt_fifo.h  hirt_kernel.c  hirt_kernel.cpp  hirt_kernel.h  hirt_mm.c  hirt_mm.cpp  hirt_mm.h  hirt_model.cpp  hirt_model.h  hirt_scheduler.c  hirt_scheduler.cpp  hirt_scheduler.h  hirt_utils.c  hirt_utils.cpp  hirt_utils.h  hmodel.cpp  hmodel.fbs  hmodel.h  hmodel_generated.h
src/: libhirt.c  libhirt_cqueue.c  libhirt_cqueue.h  libhirt_device.c  libhirt_event.c  libhirt_event.h  libhirt_fifo.c  libhirt_fifo.h  libhirt_kernel.c  libhirt_kernel.h  libhirt_mm.c  libhirt_mm.h  libhirt_port.h  libhirt_port_os.c  libhirt_scheduler.c  libhirt_scheduler.h
src/common/: hisdk_error.c  hisdk_log.c  hisdk_port.h  hisdk_port_os.c
src/himl/: himl.c  himl_op.c  himl_param.c  himl_tensor.c
src/hirt/: hirt_device.c  hirt_event.c  hirt_fifo.c  hirt_kernel.c  hirt_mm.c  hirt_mm.h  hirt_scheduler.c  hirt_utils.c  libhirt.c  libhirt_cqueue.c  libhirt_event.c  libhirt_scheduler.h
tools/include/: hihw.h  hihw_csr_def.h  hihw_ext_isa.h  hihw_reg_def.h  hikl.h  hikl_global.h  hikl_param.h  libhikl_stdio.h  libhikl_stdlib.h  libhikl_string.h
tools/src/: kernel_crt.s  kernel_wrapper.c  libhikl_entry.c  libhikl_op_conv.c  libhikl_op_conv.h  libhikl_stdio.c  libhikl_string.c  libhirt.h  libhirt_port_os.c
